Version 2.7.5dev:

* Auto-choose joystick device for port 0 when not started in mouse mode.
* Support deflate compression in fs-uae.dat.

Version 2.7.4dev:

* New action_mute_floppy_sounds, mapped to MOD+N by default.
* Added support for audioprev, audionext, audiostop, audioplay keys.
* Map audioprev, audionext and audioplay to disk swapper actions by default.
* Show on-screen messages when using disk swapper prev/next/insert actions.
* New option relative_paths (see docs).
* Support for three additional custom "joystick ports" (maps to Amiga keys).
* Also recognize .ipf and .dms floppy paths as standalone parameters.
* Fixed building with ./configure --disable-drivesound --disable-slirp
  --disable-prowizard --disable-cdtv --disable-savestate
  --disable-parallel-port and others.
* Can build with many CPU emu cores disabled.
* Some cleanup in the configure script.
* Remove dependency on GLU.
* Do not use built-in libmpeg2.
* Imported updated translations from crowdin.com.
* Updated emulation core from WinUAE 3200b18.

Version 2.7.3dev:

* Support for multimedia keys: volume up, volume down and mute.
* New shortcut Mod+K to toggle full keyboard emulation.
* Using (Left) Alt (Cmd on OS X) as default keyboard shortcut modifier.
* Workaround to allow Alt+Tab to work on non-Windows/non-OS-X platforms.
* Most built-in shortcuts are now configurable.
* Actions for built-in shortcuts are now available for mapping.
* Actions for F11 and F12 (release) can be customized.
* Ungrab mouse and keyboard when entering the menu.
* Added support for reading controller configs from fs-uae.dat.
* Support for creating static / fully self-contained .exe on Windows.
* JIT: Better fldcw_m_indexed fix (can use all x86-64 registers).
* Fixed RSP inc/dec for x86-64, shadow stack space on Windows / x86-64.
* Fix callee-saved registers for Windows x64 ABI.
* Fixed crash when using Blizzard accelerators and x86-64 JIT.
* Respect cpu option when checking for Zorro III config problems.