@@ -29,8 +29,6 @@ BuildRequires: pkgconfig(sdl2)
 BuildRequires: pkgconfig(x11)
 BuildRequires: pkgconfig(zlib)
 BuildRequires: pkgconfig(freetype2)
-BuildRequires: pkgconfig(libmpeg2)
-BuildRequires: pkgconfig(libmpeg2convert)
 BuildRequires: zip
 
 %description
@@ -58,14 +56,7 @@ using the cursor keys and right ctrl/alt keys).
 %setup -n %{name}-%{unmangled_version}
 
 %build
-%configure
-# CFLAGS='%{optflags}'
-# CXXFLAGS='%{optflags}'
-# %if 0%{?mandriva_version}
-# CFLAGS="${CFLAGS} -Wno-error=format-security"
-# CXXFLAGS="${CXXFLAGS} -Wno-error=format-security"
-# %endif
-# export CFLAGS; export CXXFLAGS
+%configure --with-libmpeg2=builtin
 make %{?_smp_mflags}
 
 %install
